--- a/HotelBookingApp/HotelBookingApp/Pages/Home.cshtml
+++ b/HotelBookingApp/HotelBookingApp/Pages/Home.cshtml
@@ -29,7 +29,7 @@
         </div>
         <div class="form-group mb-2 one-1">
             <label></label>
-            <button type="submit" class="btn btn-primary">Search</button>
+            <button type="submit" class="btn btn-primary">Filter</button>
         </div>
     </div>
     
@@ -65,7 +65,7 @@
 
 
     <div>
-        <a href="PersonalInfo" class="btn btn-primary one-1">NEXT</a>
+        <a href="PersonalInfo" class="btn btn-primary">NEXT</a>
     </div>
 }
 else
