--- a/HotelBookingApp/HotelBookingApp/Pages/PersonalInfo.cshtml
+++ b/HotelBookingApp/HotelBookingApp/Pages/PersonalInfo.cshtml
@@ -6,7 +6,7 @@
     <h3 class="display-5 text-center mb-5">Personal Information Page</h3>
     <div class="form-group mb-3">
         <label for="RoomType">Room Type</label>
-        <input type="text" class="form-control" name="RoomType" id="RoomType" value="@TempData["RoomType"]" readonly />
+        <input type="text" class="form-control" name="RoomType" id="RoomType" value="@Model.roomType" readonly />
     </div>
     <div class="form-group mb-3">
         <label for="Name">Name</label>
@@ -27,11 +27,11 @@
     </div>
     <div class="form-group mb-3">
         <label for="checkin">Check-in Date</label>
-        <input type="date" class="form-control" name="checkin" id="checkin" placeholder="Check-in Date" required>
+        <input type="date" class="form-control" name="Checkin" id="Checkin" placeholder="Check-in Date" required>
     </div>
     <div class="form-group mb-3">
         <label for="checkout">Check-out Date</label>
-        <input type="date" class="form-control" name="checkout" id="checkout" placeholder="Check-out Date" required>
+        <input type="date" class="form-control" name="Checkout" id="Checkout" placeholder="Check-out Date" required>
     </div>
     <div>
         <input type="submit" value="Book Now" class="btn btn-primary" />
